--- a/appbase/i18n/en-US.json
+++ b/appbase/i18n/en-US.json
@@ -99,9 +99,9 @@
             "off": "Sync disabled"
           },
           "status": {
-            "inactive": "Sync is disabled right now.",
-            "active": "Sync is active.",
-            "active_with_time": "Sync is active. Last sync at {{time}}."
+            "off": "Sync is disabled right now.",
+            "on": "Sync is active.",
+            "on_with_time": "Sync is active. Last sync at {{time}}."
           },
           "action": {
             "start": "Enable sync",
@@ -119,6 +119,61 @@
           }
         },
         "export": "Export"
+      },
+      "cards": {
+        "sync": {
+          "title": "Synchronization",
+          "description": "Connect the panel to supported providers and distribute data.",
+          "providers": {
+            "google_drive": {
+              "name": "Google Drive",
+              "description": "Official integration with Google authentication."
+            },
+            "microsoft_onedrive": {
+              "name": "OneDrive",
+              "description": "Sync with Microsoft corporate accounts."
+            }
+          },
+          "meta": {
+            "last_sync": "Last sync",
+            "server": "Server",
+            "devices": "Connected devices"
+          }
+        },
+        "backup": {
+          "title": "Backup",
+          "description": "Protect critical records and restore configurations in seconds.",
+          "meta": {
+            "last_backup": "Last backup",
+            "storage": "Storage",
+            "storage_empty": "No destination",
+            "size": "Estimated size"
+          },
+          "note": "Set up a cloud account or export data manually to ensure redundancy."
+        },
+        "connectivity": {
+          "title": "Connectivity",
+          "description": "Active parameters and service latency in real time.",
+          "meta": {
+            "endpoint": "Endpoint",
+            "region": "Region",
+            "latency": "Average latency"
+          },
+          "note": "Monitor response time and prioritize redundant links during critical windows."
+        },
+        "security": {
+          "title": "Security",
+          "description": "Authenticated sessions, applied policies, and recent events.",
+          "meta": {
+            "last_review": "Last review",
+            "status": "Status",
+            "alerts": "Active alerts"
+          },
+          "status": {
+            "pending": "Under review"
+          },
+          "note": "Ensure multi-factor authentication on connected devices and review logs weekly."
+        }
       },
       "summary": {
         "user": "User",
