--- a/appbase/i18n/es-ES.json
+++ b/appbase/i18n/es-ES.json
@@ -99,9 +99,9 @@
             "off": "Sincronización desactivada"
           },
           "status": {
-            "inactive": "La sincronización está desactivada en este momento.",
-            "active": "La sincronización está activa.",
-            "active_with_time": "La sincronización está activa. Última sincronización el {{time}}."
+            "off": "La sincronización está desactivada en este momento.",
+            "on": "La sincronización está activa.",
+            "on_with_time": "La sincronización está activa. Última sincronización el {{time}}."
           },
           "action": {
             "start": "Activar sincronización",
@@ -119,6 +119,61 @@
           }
         },
         "export": "Exportar"
+      },
+      "cards": {
+        "sync": {
+          "title": "Sincronización",
+          "description": "Conecta el panel a los proveedores compatibles y distribuye los datos.",
+          "providers": {
+            "google_drive": {
+              "name": "Google Drive",
+              "description": "Integración oficial con autenticación de Google."
+            },
+            "microsoft_onedrive": {
+              "name": "OneDrive",
+              "description": "Sincroniza con cuentas corporativas de Microsoft."
+            }
+          },
+          "meta": {
+            "last_sync": "Última sincronización",
+            "server": "Servidor",
+            "devices": "Dispositivos conectados"
+          }
+        },
+        "backup": {
+          "title": "Copia de seguridad",
+          "description": "Protege registros críticos y restaura configuraciones en segundos.",
+          "meta": {
+            "last_backup": "Última copia de seguridad",
+            "storage": "Almacenamiento",
+            "storage_empty": "Sin destino",
+            "size": "Tamaño estimado"
+          },
+          "note": "Configura una cuenta en la nube o exporta los datos manualmente para garantizar redundancia."
+        },
+        "connectivity": {
+          "title": "Conectividad",
+          "description": "Parámetros activos y latencia de los servicios en tiempo real.",
+          "meta": {
+            "endpoint": "Endpoint",
+            "region": "Región",
+            "latency": "Latencia media"
+          },
+          "note": "Monitorea el tiempo de respuesta y prioriza enlaces redundantes durante ventanas críticas de operación."
+        },
+        "security": {
+          "title": "Seguridad",
+          "description": "Sesiones autenticadas, políticas aplicadas y eventos recientes.",
+          "meta": {
+            "last_review": "Última revisión",
+            "status": "Estado",
+            "alerts": "Alertas activas"
+          },
+          "status": {
+            "pending": "En revisión"
+          },
+          "note": "Garantiza la autenticación multifactor en los dispositivos conectados y revisa los registros semanalmente."
+        }
       },
       "summary": {
         "user": "Usuario",
