feat: enable clean mobile shell with local auth

--- a/appbase/i18n/en-US.json
+++ b/appbase/i18n/en-US.json
@@ -179,7 +179,7 @@
         "dirty": "Unsaved changes",
         "disabled": "Unavailable offline"
       },
-      "meta": "Developed by 5Horas • Marco Project — AppBase R1.1",
+      "meta": "Developed by 5Horas • Marco Project — AppBase v3.0 • Clean",
       "login": {
         "ok": "Connected"
       }
