--- a/appbase/i18n/pt-BR.json
+++ b/appbase/i18n/pt-BR.json
@@ -179,7 +179,7 @@
         "dirty": "Alterações pendentes",
         "disabled": "Indisponível offline"
       },
-      "meta": "Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1",
+      "meta": "Desenvolvido por 5Horas • Projeto Marco — AppBase v3.0 • Clean",
       "login": {
         "ok": "Conectado"
       }
