--- a/appbase/i18n/es-ES.json
+++ b/appbase/i18n/es-ES.json
@@ -179,7 +179,7 @@
         "dirty": "Cambios pendientes",
         "disabled": "No disponible sin conexión"
       },
-      "meta": "Desarrollado por 5Horas • Proyecto Marco — AppBase R1.1",
+      "meta": "Desarrollado por 5Horas • Proyecto Marco — AppBase v3.0 • Clean",
       "login": {
         "ok": "Conectado"
       }
