feat: simplify theme toggle

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -2,6 +2,7 @@
   "app.title": "MiniApp Base",
   "actions.language": "Language",
   "actions.theme": "Theme",
+  "actions.toggleTheme": "Toggle theme",
   "actions.profile": "Profile",
   "actions.switchUser": "Switch user",
   "actions.logout": "Sign out",
