--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -2,6 +2,7 @@
   "app.title": "MiniApp Base",
   "actions.language": "Idioma",
   "actions.theme": "Tema",
+  "actions.toggleTheme": "Cambiar tema",
   "actions.profile": "Perfil",
   "actions.switchUser": "Cambiar usuario",
   "actions.logout": "Cerrar sesión",
