--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -2,6 +2,7 @@
   "app.title": "MiniApp Base",
   "actions.language": "Idioma",
   "actions.theme": "Tema",
+  "actions.toggleTheme": "Alternar tema",
   "actions.profile": "Perfil",
   "actions.switchUser": "Trocar usuário",
   "actions.logout": "Sair",
