--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -3,6 +3,7 @@
   "actions.language": "Idioma",
   "actions.theme": "Tema",
   "actions.toggleTheme": "Cambiar tema",
+  "actions.toggleLanguage": "Cambiar idioma",
   "actions.profile": "Perfil",
   "actions.switchUser": "Cambiar usuario",
   "actions.logout": "Cerrar sesión",
