Add sidebar settings submenu

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -12,6 +12,8 @@
   "nav.activity": "Activity",
   "nav.analytics": "Analytics",
   "nav.settings": "Settings",
+  "settings.language": "Language",
+  "settings.theme": "Theme",
   "panel.welcomeTitle": "Welcome!",
   "panel.welcomeMessage": "Pick an option from the menu to start exploring your mini app.",
   "panel.actions.login": "Sign in",
