Add user panel shortcut and update smoke test

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -7,6 +7,8 @@
   "actions.profile": "Profile",
   "actions.switchUser": "Switch user",
   "actions.logout": "Sign out",
+  "actions.openUserPanel": "Open user panel",
+  "actions.openUserPanelWithName": "Open user panel for {name}",
   "actions.toggleSidebar": "Toggle sidebar",
   "nav.dashboard": "Dashboard",
   "nav.activity": "Activity",
@@ -14,6 +16,7 @@
   "nav.settings": "Settings",
   "settings.language": "Language",
   "settings.theme": "Theme",
+  "settings.userPanel": "User panel",
   "panel.welcomeTitle": "Welcome!",
   "panel.welcomeMessage": "Pick an option from the menu to start exploring your mini app.",
   "panel.actions.login": "Sign in",
