--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -7,6 +7,8 @@
   "actions.profile": "Perfil",
   "actions.switchUser": "Cambiar usuario",
   "actions.logout": "Cerrar sesión",
+  "actions.openUserPanel": "Abrir panel de usuario",
+  "actions.openUserPanelWithName": "Abrir panel de usuario de {name}",
   "actions.toggleSidebar": "Alternar barra lateral",
   "nav.dashboard": "Inicio",
   "nav.activity": "Actividad",
@@ -14,6 +16,7 @@
   "nav.settings": "Configuraciones",
   "settings.language": "Idioma",
   "settings.theme": "Tema",
+  "settings.userPanel": "Panel de usuario",
   "panel.welcomeTitle": "¡Bienvenido!",
   "panel.welcomeMessage": "Elige una opción del menú para comenzar a explorar tu mini app.",
   "panel.actions.login": "Ingresar",
