--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -7,6 +7,8 @@
   "actions.profile": "Perfil",
   "actions.switchUser": "Trocar usuário",
   "actions.logout": "Sair",
+  "actions.openUserPanel": "Abrir painel do usuário",
+  "actions.openUserPanelWithName": "Abrir painel do usuário de {name}",
   "actions.toggleSidebar": "Alternar barra lateral",
   "nav.dashboard": "Início",
   "nav.activity": "Atividades",
@@ -14,6 +16,7 @@
   "nav.settings": "Configurações",
   "settings.language": "Idioma",
   "settings.theme": "Tema",
+  "settings.userPanel": "Painel do usuário",
   "panel.welcomeTitle": "Bem-vindo(a)!",
   "panel.welcomeMessage": "Selecione uma opção no menu para começar a explorar seu miniaplicativo.",
   "panel.actions.login": "Acessar",
