Add profile management flows and E2E coverage

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -10,6 +10,8 @@
   "actions.openUserPanel": "Open user panel",
   "actions.openUserPanelWithName": "Open user panel for {name}",
   "actions.toggleSidebar": "Toggle sidebar",
+  "actions.save": "Save",
+  "actions.cancel": "Cancel",
   "nav.dashboard": "Dashboard",
   "nav.activity": "Activity",
   "nav.analytics": "Analytics",
@@ -28,17 +30,33 @@
   "auth.register.submit": "Register",
   "auth.profile.title": "Profile",
   "auth.profile.logout": "Log out",
+  "auth.profile.delete": "Delete account",
+  "auth.profile.deleteConfirm": "Are you sure you want to delete {name}'s account? This action cannot be undone.",
+  "auth.profile.form.profileLegend": "Personal information",
+  "auth.profile.form.passwordLegend": "Security",
+  "auth.profile.form.updatePassword": "Update password",
   "auth.form.name": "Name",
   "auth.form.email": "Email",
   "auth.form.password": "Password",
   "auth.form.role": "Access role",
   "auth.form.owner": "Owner",
   "auth.form.member": "Member",
+  "auth.form.currentPassword": "Current password",
+  "auth.form.newPassword": "New password",
+  "auth.form.confirmPassword": "Confirm new password",
   "auth.feedback.registered": "Registration completed successfully.",
   "auth.feedback.loggedIn": "Signed in as {name}.",
   "auth.feedback.switched": "Active user: {name}.",
   "auth.feedback.invalid": "Invalid credentials. Try again.",
   "auth.feedback.exists": "Email already registered.",
+  "auth.feedback.required": "Please fill in all required fields.",
+  "auth.feedback.profileUpdated": "Profile updated successfully.",
+  "auth.feedback.userNotFound": "User not found.",
+  "auth.feedback.generic": "Something went wrong. Please try again.",
+  "auth.feedback.passwordMismatch": "Passwords do not match.",
+  "auth.feedback.passwordChanged": "Password updated successfully.",
+  "auth.feedback.invalidCurrentPassword": "Current password is incorrect.",
+  "auth.feedback.userDeleted": "Account removed. You'll be redirected.",
   "theme.light": "Light",
   "theme.dark": "Dark",
   "theme.system": "System",
