--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -10,6 +10,8 @@
   "actions.openUserPanel": "Abrir panel de usuario",
   "actions.openUserPanelWithName": "Abrir panel de usuario de {name}",
   "actions.toggleSidebar": "Alternar barra lateral",
+  "actions.save": "Guardar",
+  "actions.cancel": "Cancelar",
   "nav.dashboard": "Inicio",
   "nav.activity": "Actividad",
   "nav.analytics": "Analítica",
@@ -28,17 +30,33 @@
   "auth.register.submit": "Registrar",
   "auth.profile.title": "Perfil",
   "auth.profile.logout": "Cerrar sesión",
+  "auth.profile.delete": "Eliminar cuenta",
+  "auth.profile.deleteConfirm": "¿Desea eliminar la cuenta de {name}? Esta acción no se puede deshacer.",
+  "auth.profile.form.profileLegend": "Información personal",
+  "auth.profile.form.passwordLegend": "Seguridad",
+  "auth.profile.form.updatePassword": "Actualizar contraseña",
   "auth.form.name": "Nombre",
   "auth.form.email": "Correo electrónico",
   "auth.form.password": "Contraseña",
   "auth.form.role": "Rol de acceso",
   "auth.form.owner": "Propietario",
   "auth.form.member": "Miembro",
+  "auth.form.currentPassword": "Contraseña actual",
+  "auth.form.newPassword": "Nueva contraseña",
+  "auth.form.confirmPassword": "Confirmar nueva contraseña",
   "auth.feedback.registered": "Registro completado con éxito.",
   "auth.feedback.loggedIn": "Sesión iniciada como {name}.",
   "auth.feedback.switched": "Usuario activo: {name}.",
   "auth.feedback.invalid": "Credenciales inválidas. Intenta de nuevo.",
   "auth.feedback.exists": "Correo ya registrado.",
+  "auth.feedback.required": "Complete todos los campos obligatorios.",
+  "auth.feedback.profileUpdated": "Perfil actualizado correctamente.",
+  "auth.feedback.userNotFound": "Usuario no encontrado.",
+  "auth.feedback.generic": "Ocurrió un error. Inténtelo nuevamente.",
+  "auth.feedback.passwordMismatch": "Las contraseñas no coinciden.",
+  "auth.feedback.passwordChanged": "Contraseña actualizada correctamente.",
+  "auth.feedback.invalidCurrentPassword": "La contraseña actual es incorrecta.",
+  "auth.feedback.userDeleted": "Cuenta eliminada. Será redirigido.",
   "theme.light": "Claro",
   "theme.dark": "Oscuro",
   "theme.system": "Automático",
