--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -10,6 +10,8 @@
   "actions.openUserPanel": "Abrir painel do usuário",
   "actions.openUserPanelWithName": "Abrir painel do usuário de {name}",
   "actions.toggleSidebar": "Alternar barra lateral",
+  "actions.save": "Salvar",
+  "actions.cancel": "Cancelar",
   "nav.dashboard": "Início",
   "nav.activity": "Atividades",
   "nav.analytics": "Análises",
@@ -29,17 +31,33 @@
   "auth.register.submit": "Registrar",
   "auth.profile.title": "Perfil",
   "auth.profile.logout": "Encerrar sessão",
+  "auth.profile.delete": "Excluir conta",
+  "auth.profile.deleteConfirm": "Tem certeza de que deseja excluir a conta de {name}? Esta ação não pode ser desfeita.",
+  "auth.profile.form.profileLegend": "Dados pessoais",
+  "auth.profile.form.passwordLegend": "Segurança",
+  "auth.profile.form.updatePassword": "Atualizar senha",
   "auth.form.name": "Nome",
   "auth.form.email": "E-mail",
   "auth.form.password": "Senha",
   "auth.form.role": "Perfil de acesso",
   "auth.form.owner": "Proprietário",
   "auth.form.member": "Membro",
+  "auth.form.currentPassword": "Senha atual",
+  "auth.form.newPassword": "Nova senha",
+  "auth.form.confirmPassword": "Confirmar nova senha",
   "auth.feedback.registered": "Cadastro realizado com sucesso.",
   "auth.feedback.loggedIn": "Sessão iniciada como {name}.",
   "auth.feedback.switched": "Usuário ativo: {name}.",
   "auth.feedback.invalid": "Credenciais inválidas. Tente novamente.",
   "auth.feedback.exists": "E-mail já cadastrado.",
+  "auth.feedback.required": "Preencha todos os campos obrigatórios.",
+  "auth.feedback.profileUpdated": "Perfil atualizado com sucesso.",
+  "auth.feedback.userNotFound": "Usuário não encontrado.",
+  "auth.feedback.generic": "Ocorreu um erro. Tente novamente.",
+  "auth.feedback.passwordMismatch": "As senhas informadas não coincidem.",
+  "auth.feedback.passwordChanged": "Senha atualizada com sucesso.",
+  "auth.feedback.invalidCurrentPassword": "A senha atual está incorreta.",
+  "auth.feedback.userDeleted": "Conta removida. Você será redirecionado.",
   "theme.light": "Claro",
   "theme.dark": "Escuro",
   "theme.system": "Automático",
